turtleart.polygon6.Polygon6.scala.error
Compilation error:
Polygon6:2: error: '<-' expected but ')' found.
  for (i->0 to 5) {
                ^Polygon6:6: error: illegal start of simple expression
} 
^